force-app/main/default/objects/Account/fields/Account_Team_Member_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Member_Submitter__c</fullName>
    <label>Account Team Member Submitter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>