force-app/main/default/objects/Account/fields/Account_Team_Members_IDs__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Members_IDs__c</fullName>
    <label>Account Team Members IDs</label>
    <type>TextArea</type>
</CustomField>