force-app/main/default/objects/Account/fields/Activite_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Activite_de_l_entreprise__c</fullName>
    <label>Activité de l&apos;entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aéronautique</fullName>
            </value>
            <value>
                <fullName>High-tech</fullName>
            </value>
            <value>
                <fullName>Textile</fullName>
            </value>
            <value>
                <fullName>Industrie</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Pharmaceutique</fullName>
            </value>
            <value>
                <fullName>Denrées Périssables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>