force-app/main/default/objects/Account/fields/Adresse_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_l_entreprise__c</fullName>
    <label>Adresse de l&apos;entreprise</label>
    <length>100</length>
    <type>Text</type>
</CustomField>