force-app/main/default/objects/Account/fields/Approval_request__c.field-meta.xml
<CustomField>
    <fullName>Approval_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval request</label>
    <type>Checkbox</type>
</CustomField>