force-app/main/default/objects/Account/fields/Approval_submitter__c.field-meta.xml
<CustomField>
    <fullName>Approval_submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>