force-app/main/default/objects/Account/fields/Caution_ou_garantie__c.field-meta.xml
<CustomField>
    <fullName>Caution_ou_garantie__c</fullName>
    <label>Caution ou garantie</label>
    <length>100</length>
    <type>Text</type>
</CustomField>