force-app/main/default/objects/Account/fields/Client_confrere__c.field-meta.xml
<CustomField>
    <fullName>Client_confrere__c</fullName>
    <label>Client confrère</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
                <default>true</default>
                <label>Non</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>