force-app/main/default/objects/Account/fields/Code_postal_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Code_postal_de_l_entreprise__c</fullName>
    <label>Code postal de l&apos;entreprise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>