force-app/main/default/objects/Account/fields/Conditions_de_reglement__c.field-meta.xml
<CustomField>
    <fullName>Conditions_de_reglement__c</fullName>
    <label>Conditions de règlement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 jours</fullName>
            </value>
            <value>
                <fullName>45 jours</fullName>
            </value>
            <value>
                <fullName>60 jours</fullName>
            </value>
            <value>
                <fullName>90 jours</fullName>
            </value>
            <value>
                <fullName>120 jours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>