force-app/main/default/objects/Account/fields/Conditions_de_reglement_ancienne_valeur__c.field-meta.xml
<CustomField>
    <fullName>Conditions_de_reglement_ancienne_valeur__c</fullName>
    <label>Conditions de règlement- Ancienne valeur</label>
    <length>30</length>
    <type>Text</type>
</CustomField>