force-app/main/default/objects/Account/fields/Date_d_approbation__c.field-meta.xml
<CustomField>
    <fullName>Date_d_approbation__c</fullName>
    <label>Date d&apos;approbation</label>
    <type>Date</type>
</CustomField>