force-app/main/default/objects/Account/fields/Date_de_validation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_validation__c</fullName>
    <label>Date de validation</label>
    <type>Date</type>
</CustomField>