force-app/main/default/objects/Account/fields/Echeance__c.field-meta.xml
<CustomField>
    <fullName>Echeance__c</fullName>
    <label>Échéance</label>
    <type>Date</type>
</CustomField>