force-app/main/default/objects/Account/fields/Entite_Juridique__c.field-meta.xml
<CustomField>
    <fullName>Entite_Juridique__c</fullName>
    <formula>TEXT(Owner.Entite_Juridique__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entité Juridique</label>
    <type>Text</type>
</CustomField>