force-app/main/default/objects/Account/fields/FROM_API__c.field-meta.xml
<CustomField>
    <fullName>FROM_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FROM_API</label>
    <type>Checkbox</type>
</CustomField>