force-app/main/default/objects/Account/fields/ICE_ID_TVA__c.field-meta.xml
<CustomField>
    <fullName>ICE_ID_TVA__c</fullName>
    <label>ICE/ ID TVA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>