force-app/main/default/objects/Account/fields/ID_TRO__c.field-meta.xml
<CustomField>
    <fullName>ID_TRO__c</fullName>
    <label>ID TRO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>