force-app/main/default/objects/Account/fields/ID_TST__c.field-meta.xml
<CustomField>
    <fullName>ID_TST__c</fullName>
    <label>ID TST</label>
    <length>30</length>
    <type>Text</type>
</CustomField>