force-app/main/default/objects/Account/fields/IF__c.field-meta.xml
<CustomField>
    <fullName>IF__c</fullName>
    <label>IF</label>
    <length>30</length>
    <type>Text</type>
</CustomField>