force-app/main/default/objects/Account/fields/Is_Owner_or_his_manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_or_his_manager__c</fullName>
    <formula>OR(
    $User.Id = OwnerId, 
    CONTAINS($UserRole.Name, &quot;Manager&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner or his manager</label>
    <type>Checkbox</type>
</CustomField>