force-app/main/default/objects/Account/fields/is_Rolledback__c.field-meta.xml
<CustomField>
    <fullName>is_Rolledback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field turns to true if the manager reject the update of the fields then the changes will be rolledback</description>
    <label>is Rolledback</label>
    <type>Checkbox</type>
</CustomField>