force-app/main/default/objects/Account/fields/isPending__c.field-meta.xml
<CustomField>
    <fullName>isPending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPending</label>
    <type>Checkbox</type>
</CustomField>