force-app/main/default/objects/Account/fields/IsTeamMember__c.field-meta.xml
<CustomField>
    <fullName>IsTeamMember__c</fullName>
    <formula>CONTAINS(Account_Team_Members_IDs__c, $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsTeamMember</label>
    <type>Checkbox</type>
</CustomField>