force-app/main/default/objects/Account/fields/Mode_de_reglement_ancienne_valeur__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_reglement_ancienne_valeur__c</fullName>
    <label>Mode de règlement - Ancienne valeur</label>
    <length>30</length>
    <type>Text</type>
</CustomField>