force-app/main/default/objects/Account/fields/Motif_blacklistage__c.field-meta.xml
<CustomField>
    <fullName>Motif_blacklistage__c</fullName>
    <label>Motif de blacklist</label>
    <type>TextArea</type>
</CustomField>