force-app/main/default/objects/Account/fields/my_role__c.field-meta.xml
<CustomField>
    <fullName>my_role__c</fullName>
    <formula>$UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>my role</label>
    <type>Text</type>
</CustomField>