force-app/main/default/objects/Account/fields/N_RC__c.field-meta.xml
<CustomField>
    <fullName>N_RC__c</fullName>
    <label>N° RC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>