force-app/main/default/objects/Account/fields/Nom_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_contact__c</fullName>
    <label>Nom du contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>