force-app/main/default/objects/Account/fields/Nombre_d_opp_en_bon_pour_accord__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_opp_en_bon_pour_accord__c</fullName>
    <label>Nombre d&apos;opp en bon pour accord</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Bon pour accord</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>