force-app/main/default/objects/Account/fields/Pays_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Pays_de_l_entreprise__c</fullName>
    <label>Pays de l&apos;entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Chine</fullName>
            </value>
            <value>
                <fullName>Inde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>