force-app/main/default/objects/Account/fields/Plafond_Ancienne_valeur__c.field-meta.xml
<CustomField>
    <fullName>Plafond_Ancienne_valeur__c</fullName>
    <label>Plafond - Ancienne valeur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>