force-app/main/default/objects/Account/fields/Prestation__c.field-meta.xml
<CustomField>
    <fullName>Prestation__c</fullName>
    <label>Prestation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>