force-app/main/default/objects/Account/fields/Previous_conditions_de_reglement__c.field-meta.xml
<CustomField>
    <fullName>Previous_conditions_de_reglement__c</fullName>
    <label>Previous conditions de reglement</label>
    <length>30</length>
    <type>Text</type>
</CustomField>