force-app/main/default/objects/Account/fields/PreviousAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>PreviousAccountStatus__c</fullName>
    <description>Thsi field contains the status of the account before it was blacklisted</description>
    <label>PreviousAccountStatus</label>
    <length>30</length>
    <type>Text</type>
</CustomField>