force-app/main/default/objects/Account/fields/Prive__c.field-meta.xml
<CustomField>
    <fullName>Prive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privé</label>
    <type>Checkbox</type>
</CustomField>