force-app/main/default/objects/Account/fields/Raison_d_approbation__c.field-meta.xml
<CustomField>
    <fullName>Raison_d_approbation__c</fullName>
    <label>Raison d&apos;approbation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification du Compte</fullName>
            </value>
            <value>
                <fullName>Blacklist</fullName>
            </value>
            <value>
                <fullName>Modification d&apos;informations de paiement</fullName>
            </value>
            <value>
                <fullName>Rejoindre Equipe</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
                <isActive>false</isActive>
                <label>Conversion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>