force-app/main/default/objects/Account/fields/Statut_d_approbation__c.field-meta.xml
<CustomField>
    <fullName>Statut_d_approbation__c</fullName>
    <label>Statut d’approbation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approuvé</fullName>
            </value>
            <value>
                <fullName>Rejeté</fullName>
            </value>
            <value>
                <fullName>En attente d&apos;approbation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>