force-app/main/default/objects/Account/fields/TECH_AP_MAJ_Infos_Paiement__c.field-meta.xml
<CustomField>
    <fullName>TECH_AP_MAJ_Infos_Paiement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_AP_MAJ_Infos_Paiement</label>
    <type>Checkbox</type>
</CustomField>