force-app/main/default/objects/Account/fields/Termes_de_Reglement__c.field-meta.xml
<CustomField>
    <fullName>Termes_de_Reglement__c</fullName>
    <label>Termes de Règlement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crédit</fullName>
            </value>
            <value>
                <fullName>Comptant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>