force-app/main/default/objects/Account/fields/Termes_de_reglement_ancienne_valeur__c.field-meta.xml
<CustomField>
    <fullName>Termes_de_reglement_ancienne_valeur__c</fullName>
    <label>Termes de réglement- Ancienne valeur</label>
    <length>30</length>
    <type>Text</type>
</CustomField>