force-app/main/default/objects/Account/fields/Trafic__c.field-meta.xml
<CustomField>
    <fullName>Trafic__c</fullName>
    <label>Trafic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Logistique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>