force-app/main/default/objects/Account/fields/Tribunal__c.field-meta.xml
<CustomField>
    <fullName>Tribunal__c</fullName>
    <label>Tribunal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rabat</fullName>
            </value>
            <value>
                <fullName>Casablanca</fullName>
            </value>
            <value>
                <fullName>Fès</fullName>
            </value>
            <value>
                <fullName>Tanger</fullName>
            </value>
            <value>
                <fullName>Marrakech</fullName>
            </value>
            <value>
                <fullName>Agadir</fullName>
            </value>
            <value>
                <fullName>Oujda</fullName>
            </value>
            <value>
                <fullName>Meknès</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>