force-app/main/default/objects/Account/fields/Type_de_document__c.field-meta.xml
<CustomField>
    <fullName>Type_de_document__c</fullName>
    <label>Type de document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiche client</fullName>
            </value>
            <value>
                <fullName>Contrat de service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>