force-app/main/default/objects/Account/fields/Validite__c.field-meta.xml
<CustomField>
    <fullName>Validite__c</fullName>
    <label>Validité</label>
    <length>30</length>
    <type>Text</type>
</CustomField>