force-app/main/default/objects/Account/fields/Ville_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Ville_de_l_entreprise__c</fullName>
    <label>Ville de l&apos;entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casablanca</fullName>
            </value>
            <value>
                <fullName>Rabat</fullName>
            </value>
            <value>
                <fullName>Tanger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>