force-app/main/default/objects/Account/validationRules/Block_Edit_on_Blacklisted_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Edit_on_Blacklisted_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( $User.Bypass_VR__c ),
    ISPICKVAL(PRIORVALUE(Statut__c), &quot;Blacklisté&quot;),
    ISPICKVAL(Statut__c, &quot;Blacklisté&quot;)
)</errorConditionFormula>
    <errorMessage>Compte blacklisté. Modification non autorisé</errorMessage>
</ValidationRule>