force-app/main/default/objects/Account/validationRules/Validate_Client_Confrere.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Client_Confrere</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( $User.Bypass_VR__c ),
    ISPICKVAL(Client_confrere__c, &quot;Oui&quot;),
    ISBLANK(ParentId)
)</errorConditionFormula>
    <errorMessage>Veuillez préciser le compte confrère.</errorMessage>
</ValidationRule>