force-app/main/default/objects/Account/validationRules/Validate_ICE_Maroc.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_ICE_Maroc</fullName>
    <active>true</active>
    <description>ICE/Identifiant Fiscal doit respecter un format précis</description>
    <errorConditionFormula>AND(
NOT( $User.Bypass_VR__c ),
    BillingCountry = &quot;Maroc&quot;,     /* Si le pays est le Maroc */
    NOT(ISBLANK(ICE_ID_TVA__c)),                   /* Si le champ ICE est rempli */
    NOT(REGEX(ICE_ID_TVA__c, &quot;^[0-9]{15}$&quot;))      /* Le champ ICE doit contenir exactement 15 chiffres */
)</errorConditionFormula>
    <errorMessage>L&apos;ICE/Identifiant Fiscal doit contenir exactement 15 chiffres pour les adresses au Maroc.</errorMessage>
</ValidationRule>