force-app/main/default/objects/Account/validationRules/Validate_N_RC.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_N_RC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( $User.Bypass_VR__c ),
  NOT(REGEX(N_RC__c, &quot;^[0-9]*$&quot;))
)</errorConditionFormula>
    <errorMessage>Le champ N° RC doit contenir uniquement des chiffres.</errorMessage>
</ValidationRule>