force-app/main/default/objects/Account/validationRules/Validate_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Phone_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $User.Bypass_VR__c ),
NOT(REGEX(N_RC__c, &quot;^[0-9]*$&quot;)),
    /* Pays = Maroc */
    BillingCountry=&quot;Maroc&quot;,

    /* Numéro non vide */
    NOT(ISBLANK(Phone)),

    /* Numéro invalide si ne respecte aucun des trois formats valides */
    NOT(
        REGEX(
            Phone,
            &quot;^00212[567]\\d{8}$&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>Le numéro de téléphone est invalide pour un compte situé au Maroc. 
Respectez le formats suivant :
00212 avec 14 chiffres</errorMessage>
</ValidationRule>