force-app/main/default/objects/Account/validationRules/Validate_Termes_de_reglement_comptant.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Termes_de_reglement_comptant</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        NOT( $User.Bypass_VR__c ),
        ISPICKVAL( Termes_de_Reglement__c , &quot;Comptant&quot;),
        NOT(ISBLANK(TEXT(Conditions_de_reglement__c )))
    )</errorConditionFormula>
    <errorMessage>Pour un crédit pas besoin de préciser les conditions de reglement</errorMessage>
</ValidationRule>