force-app/main/default/objects/Account/listViews/Les_comptes_blackistes.listView-meta.xml
<ListView>
    <fullName>Les_comptes_blackistes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Statut__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Blacklisté</value>
    </filters>
    <label>Les comptes blackistés</label>
</ListView>