force-app/main/default/objects/Account/listViews/Mes_clients.listView-meta.xml
<ListView>
    <fullName>Mes_clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Client_confrere__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <label>Mes clients</label>
</ListView>